# backup-tool

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs
.github/workflows/: integration.yml  release.yml
docs/: metadata-database.md
src/: backup.rs  bucket.rs  config.rs  datastore.rs  decryption.rs  encryption.rs  filetype.rs  hash.rs  hash_worker.rs  list.rs  local_bucket.rs  main.rs  metadata_file.rs  metadata_file_sql.rs  query.rs  rebuild_cache.rs  restore.rs  sharding.rs  sqlite_cache.rs  swift.rs  upload_worker.rs  utils.rs
tests/: integration.sh
