[package]
name = "backup-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = "0.27.0"
#ignore = "0.4.18"
sha2 = "0.10.2"
sequoia-openpgp = "1.9.0"
rmp-serde = "1.1.0"
serde = "1.0.137"
serde_derive = "1.0.137"
# openstack = "0.4.0"
openstack = { git = "https://github.com/dtantsur/rust-openstack" }
walkdir = "2.3.2"
crossbeam-channel = "0.5.5"
hmac = "0.12.1"
